SendLBC: switch from Modal to Page

--- a/ui/scss/component/_main.scss
+++ b/ui/scss/component/_main.scss
@@ -255,6 +255,11 @@
   }
 }
 
+.main--send {
+  @extend .main--buy;
+  max-width: 34rem;
+}
+
 .main--empty {
   align-self: center;
   display: flex;
