--- a/ui/scss/component/_main.scss
+++ b/ui/scss/component/_main.scss
@@ -168,7 +168,9 @@
 }
 
 .main--livestream {
-  margin-top: var(--spacing-m);
+  margin: var(--spacing-m);
+  margin-right: auto;
+  width: calc(100vw - var(--livestream-comments-width) - var(--spacing-m) * 2);
 }
 
 .main--full-width {
