--- a/ui/scss/component/_card.scss
+++ b/ui/scss/component/_card.scss
@@ -17,7 +17,7 @@
 
 .card--section {
   position: relative;
-  padding: var(--spacing-l);
+  padding: var(--spacing-m);
 }
 
 .card--reward-total {
@@ -82,7 +82,7 @@
 
 .card__title-section {
   @extend .section__flex;
-  padding: var(--spacing-m) var(--spacing-l);
+  padding: var(--spacing-m);
 
   @media (max-width: $breakpoint-small) {
     padding: 0;
@@ -175,7 +175,7 @@
 .card__title {
   display: block;
   align-items: center;
-  font-size: var(--font-title);
+  font-size: var(--font-large);
   font-weight: var(--font-weight-light);
 
   & > *:not(:last-child) {
@@ -262,7 +262,7 @@
 }
 
 .card__body {
-  padding: var(--spacing-l);
+  padding: var(--spacing-m);
 
   &:not(.card__body--no-title) {
     padding-top: 0;
@@ -279,10 +279,11 @@
 }
 
 .card__main-actions {
-  padding: var(--spacing-l);
+  padding: var(--spacing-m);
   padding-bottom: 0;
-  margin-bottom: var(--spacing-l);
+  margin-bottom: var(--spacing-m);
   border-top: 1px solid var(--color-border);
+  height: 100%;
 
   &:only-child {
     border-top: none;
